[tool.poetry]
name = "iburtea-chat"
version = "0.1.0"
description = ""
authors = ["Burtea Ionut Marius <139539958+MariusIonut2001@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
